<resources>
    <string name="app_name">Comma-Store</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">Sort By</string>
    <string name="egp">EGP</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="Select_Sort_Option">Select Sort Option</string>
    <string name="EGP">" EGP "</string>
    <string name="off">" %OFF"</string>
    <string name="duration">Duration</string>
    <string name="colors">Colors</string>
    <string name="description">Description</string>
    <string name="language">language</string>
    <string name="langAR">العربيه</string>
    <string-array name="DialgoArray">
        <item>From Newest To Oldest</item>
        <item>From Oldest To Newest</item>
        <item>From High Price To Low Price</item>
        <item>From Low Price To High Price</item>
    </string-array>
    <string name="title_activity_log_in__registration_">LogIn_Registration_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comma">COMMA</string>
    <string name="quantity">Quantity :</string>
    <string name="Day">" Day"</string>

</resources>