<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ItemDetails.ItemDetailsFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_SubCategoryItems"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/emblema_one"
                android:gravity="center"
                android:text="@string/comma"
                android:textAlignment="center"
                android:textColor="@color/HeaderTextColor"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/popUp_ItemDetails"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                app:layout_constraintBottom_toBottomOf="@+id/text"
                app:layout_constraintStart_toEndOf="@+id/text"
                app:layout_constraintTop_toTopOf="@+id/text"
                app:srcCompat="@drawable/ic_notification" />

            <ImageView
                android:id="@+id/popUp_ItemDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/Plus_Minus_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/MinusButton"
                            style="@style/ButtonStyle"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:background="@drawable/buttons_shape"
                            android:text="-"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/QuantityTV"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/QuantityTV"
                            style="@style/HeaderTextViewFont"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/PlusButton"
                            style="@style/ButtonStyle"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:background="@drawable/buttons_shape"
                            android:text="+"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/QuantityTV"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/AddToCartButton"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@drawable/buttons_shape"
                        android:text="@string/add_to_cart"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_SubCategoryItems">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/SubHeaderTextViewFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/ItemColorItemDetails_TV" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ItemColorItemDetails_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/DurationLayOutItemDetails_TV">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/SubHeaderTextViewFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/color_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.github.islamkhsh.CardSliderViewPager
                    android:id="@+id/viewPagerItemDetails"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"
                    app:auto_slide_time="3"
                    app:cardSlider_otherPagesWidth="24dp"
                    app:cardSlider_pageMargin="12dp"
                    app:cardSlider_smallScaleFactor="0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                </com.github.islamkhsh.CardSliderViewPager>

                <TextView
                    android:id="@+id/Title_ItemDetails_TV"
                    style="@style/SubHeaderTextViewFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/viewPagerItemDetails"
                    tools:text="Title Of the Item" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/DescountLayOutItemDetails"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/PriceAfterItemDetails_TV">

                    <TextView
                        android:id="@+id/PriceBeforeItemDetails_TV"
                        style="@style/SubHeaderTextViewFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="EGP7000" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/HeaderTextColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/PriceBeforeItemDetails_TV"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/PriceBeforeItemDetails_TV"
                        app:layout_constraintTop_toTopOf="@+id/PriceBeforeItemDetails_TV" />

                    <TextView
                        android:id="@+id/DesctountPrecentageItemDetails_TV"
                        style="@style/SubHeaderTextViewFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:textColor="@android:color/holo_red_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/PriceBeforeItemDetails_TV"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="50 %OFF" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/PriceAfterItemDetails_TV"
                    style="@style/HeaderTextViewFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@id/Title_ItemDetails_TV"
                    tools:text="EGP 6000" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.03" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/DurationLayOutItemDetails_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="@+id/DescountLayOutItemDetails"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/DescountLayOutItemDetails">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/SubHeaderTextViewFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/DurationDaysItemDetials_TV"
                        style="@style/SubHeaderTextViewFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="25aug-28aug" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/DescriptionItemDetials_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/HeaderTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    tools:text="A charging cable that works on all mobile devices, an original from Vidvi Agency, that works on all Android" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>